<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.hrithik.prevue.ui.edit.EditViewModel" />

        <variable
            name="activity"
            type="androidx.fragment.app.FragmentActivity" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/backgroundColor"
        tools:context=".ui.edit.EditFragment">

        <LinearLayout
            android:id="@+id/top_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <ImageView
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/cancel_button"
                android:onClick="@{()->viewModel.onCancelClicked()}"
                android:src="@drawable/cancel_icon" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/save_button"
                android:onClick="@{()->viewModel.onSaveClicked(activity)}"
                android:src="@drawable/save_icon" />

        </LinearLayout>

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/bottom_controls"
            android:layout_below="@id/top_controls"
            android:contentDescription="@string/preview_image" />

        <LinearLayout
            android:id="@+id/bottom_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="true"
            android:layout_above="@id/llAdView"
            android:background="?attr/colorOnPrimary"
            android:paddingVertical="15dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:onClick="@{()->viewModel.onUndoClicked()}"
                android:text="@string/undo"
                app:drawableTopCompat="@drawable/undo_icon" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:onClick="@{()->viewModel.onCropClicked()}"
                android:text="@string/crop"
                app:drawableTopCompat="@drawable/crop_icon" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:onClick="@{()->viewModel.onRotateLeftClicked()}"
                android:text="@string/rotate_left"
                app:drawableTopCompat="@drawable/rotate_left_icon" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:onClick="@{()->viewModel.onRotateRightClicked()}"
                android:text="@string/rotate_right"
                app:drawableTopCompat="@drawable/rotate_right_icon" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llAdView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:orientation="vertical"/>

        <!--<com.google.android.gms.ads.AdView
            android:id="@+id/adView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:visibility="visible"
            app:adSize="BANNER"
            app:adUnitId="@string/admob_banner">
        </com.google.android.gms.ads.AdView>-->

    </RelativeLayout>
</layout>