<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.hrithik.prevue.HomeViewModel" />
        <variable
            name="activity"
            type="androidx.fragment.app.FragmentActivity" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeFragment">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/preview_image" />

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/fab_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            app:menu_icon="@drawable/upload_icon">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/upload_gallery_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.onUploadFromGalleryClicked(activity)}"
                android:src="@drawable/gallery_icon"
                app:fab_label="@string/upload_from_gallery"
                app:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/selfie_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/selfie_icon"
                android:onClick="@{() -> viewModel.onTakeSelfieClicked(activity)}"
                app:fab_label="@string/take_selfie"
                app:fab_size="mini" />
        </com.github.clans.fab.FloatingActionMenu>

    </RelativeLayout>
</layout>